cleancode: injected observer-pattern for mainform dehardcoded picture file path, added "select picture" dialog

--- a/СoloringBookImageConverter/СoloringBookImageConverter.csproj
+++ b/СoloringBookImageConverter/СoloringBookImageConverter.csproj
@@ -48,6 +48,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -64,8 +67,9 @@
   <ItemGroup>
     <Compile Include="Controllers\BitmapConverter.cs" />
     <Compile Include="Controllers\ImageQuantizer.cs" />
-    <Compile Include="Presenters\Presenter.cs" />
+    <Compile Include="Presenters\IPresenter.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
+    <Compile Include="UI\ImagePathEventArgs.cs" />
     <Compile Include="UI\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -77,7 +81,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\Painter.cs" />
     <Compile Include="Models\Region.cs" />
-    <Compile Include="UI\View.cs" />
+    <Compile Include="UI\IMainView.cs" />
+    <Compile Include="UI\IView.cs" />
     <EmbeddedResource Include="UI\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
